--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
                     </argLine>
                     <systemPropertyVariables>
                         <allure.results.directory>target/allure-results</allure.results.directory>
+                        <logging>true</logging>
                     </systemPropertyVariables>
                 </configuration>
                 <dependencies>
