--- a/api-training/src/main/resources/config.properties
+++ b/api-training/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 env = test
-baseUrl = http://192.168.1.106/
+baseUrl = http://192.168.1.105
 locale = de
 logging = true
 
-test.baseUrl = http://192.168.1.106/
+test.baseUrl = http://192.168.1.105
 test.locale = de
 test.logging = true
