--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,10 @@
     <artifactId>api-training-socks</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>api-training</module>
+        <module>ui-training</module>
     </modules>
 
     <properties>
