--- a/ui-training/pom.xml
+++ b/ui-training/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.target>8</maven.compiler.target>
 
         <testng.version>6.14.3</testng.version>
+        <allure.version>2.17.3</allure.version>
     </properties>
 
     <dependencies>
@@ -31,6 +32,12 @@
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
             <version>6.3.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>${allure.version}</version>
         </dependency>
 
         <dependency>
